fixed more romantic links

--- a/post54.html
+++ b/post54.html
@@ -16,7 +16,7 @@
 <main>
 <article>
   <div class="top-links">
-    <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+    <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
   </div>
   <h2>54 The Author-Function as Sacrilege: A Romantic Test</h2>
   <p>The most common critique of AI writing is that there is "no one there." This assumes the Romantic ideal of an "author" as a soul pouring its meaning into the text. But the rigorous Romantics started from a more skeptical place: Schleiermacher famously argued that <strong>misunderstanding is the norm</strong>, and therefore interpretation must be a disciplined art.<sup><a href="#ref1">1</a></sup> A core part of that art was reconstructing the author's singular practice.</p>
@@ -49,7 +49,7 @@
       <li id="ref4">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>. The source of both "Mental Fight" and "dark Satanic Mills."</li>
     </ol>
   </div>
-  <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
+  <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
   <p><a href="index.html">Home</a> | <a href="post53.html">Previous Post</a> | <a href="post55.html">Next Post</a></p>
 </article>
 </main>
