--- a/post55.html
+++ b/post55.html
@@ -16,10 +16,10 @@
   <main>
     <article>
       <div class="top-links">
-        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <h2>55 More Than Bullshit: The Soulless Chaos of the Machine</h2>
-      <p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="Romantic-kit-authenticity.html">inauthenticity</a>. But this critique is too generous. It grants the machine a semblance of agency—the bullshitter, after all, has a purpose. The rigorous Romantic toolkit reveals a deeper, more damning truth.</p>
+      <p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>. But this critique is too generous. It grants the machine a semblance of agency—the bullshitter, after all, has a purpose. The rigorous Romantic toolkit reveals a deeper, more damning truth.</p>
       <p>Friedrich Schlegel argued that a great work "aims at more than it knows," carrying <strong>unconscious meanings</strong>. He believed a text's "confusions" and contradictions were themselves meaningful, revealing the author's internal struggles.<sup><a href="#ref1">1</a></sup> For a visionary like William Blake, art was a "Mental Fight," the struggle to give form to divine imagination.<sup><a href="#ref2">2</a></sup> Flaws and "confusions" in such a work are the scars of a noble battle. What happens when we apply this lens to AI?</p>
 
       <h3>From Bullshit to Chaos: An Example</h3>
@@ -42,7 +42,7 @@
           <li id="ref3">William Blake, <a href="https://www.poetryfoundation.org/poems/43656/the-divine-image" target="_blank" rel="noopener">William Blake, "The Divine Image" (Songs of Innocence)</a> from <em>Songs of Innocence</em>, which speaks of "the human form divine."</li>
         </ol>
       </div>
-      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
+      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post54.html">Previous Post</a> | <a href="post56.html">Next Post</a></p>
     </article>
   </main>
