--- a/post56.html
+++ b/post56.html
@@ -16,11 +16,11 @@
   <main>
     <article>
       <div class="top-links">
-        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <h2>56 The Monstrous Parody of Synthetic Individuality</h2>
       <p>Critics often attack a strawman of Romantic "individuality," reducing it to a teenager's diary. But the rigorous definition is about <strong>structural integrity</strong> rooted in a unique inner vision. For the Romantics, the individual soul was the locus of the divine. William Blake spoke of the "Human Form Divine," seeing imagination as the very presence of God in humanity.<sup><a href="#ref1">1</a></sup> Individuality was not a mere pattern of style; it was the sensible evidence of an immortal, ineffable soul.</p>
-      <p>This fierce commitment to a spiritually grounded self allows us to run a fascinating, and horrifying, experiment. Can we use the <a href="Romantic-kit-hermeneutics.html">two-rail method</a> to identify a "synthetic individuality" in an AI's output?</p>
+      <p>This fierce commitment to a spiritually grounded self allows us to run a fascinating, and horrifying, experiment. Can we use the <a href="romantic-kit-hermeneutics.html">two-rail method</a> to identify a "synthetic individuality" in an AI's output?</p>
 
       <h3>An Analytical Test Case</h3>
       <p>Imagine analyzing a hundred outputs from a specific fine-tuned model. We could trace its habits and find a coherent pattern—a preference for complex sentences, a tic of using maritime metaphors. The analytical part of the Romantic method would compel us to admit we have identified a consistent, recognizable "voice."</p>
@@ -39,7 +39,7 @@
           <li id="ref3">E.T.A. Hoffmann, <a href="https://www.gutenberg.org/cache/epub/31377/pg31377-images.html#div1_sand_man" target="_blank">"The Sandman" (public-domain English translation)</a>. This story is a canonical Romantic exploration of the uncanny valley and the anxiety over automata.</li>
         </ol>
       </div>
-      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
+      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post55.html">Previous Post</a> | <a href="post57.html">Next Post</a></p>
     </article>
   </main>
