--- a/post62.html
+++ b/post62.html
@@ -15,7 +15,7 @@
     <main>
         <article>
             <div class="kit-links-small">
-                <a href="Romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
+                <a href="romantic-quick-kit.html" class="kit-link-small">Romantic Quick Kit</a>
                 <a href="ai-hermeneutics-kit.html" class="kit-link-small">AI Hermeneutics Kit</a>
             </div>
             <h2>62 A Practical Method for Reading AI: Archaeology and Teleology</h2>
