--- a/romantic-quick-kit.html
+++ b/romantic-quick-kit.html
@@ -26,14 +26,14 @@
 
       <nav class="toc">
         <ul>
-          <li><a href="Romantic-kit-hermeneutics.html">Romantic Hermeneutics (How to Read)</a></li>
-          <li><a href="Romantic-kit-authenticity.html">Authenticity (Self & Sincerity)</a></li>
-          <li><a href="Romantic-kit-organic-form.html">The “Organic” (Art, Nature, Unity)</a></li>
-          <li><a href="Romantic-kit-technology-machine.html">Technology & The Machine</a></li>
-          <li><a href="Romantic-kit-contexts-germany.html">Contexts: Germany</a></li>
-          <li><a href="Romantic-kit-contexts-england.html">Contexts: England</a></li>
-          <li><a href="Romantic-kit-contexts-america.html">Contexts: America</a></li>
-          <li><a href="Romantic-kit-glossary.html">Quick Glossary</a></li>
+          <li><a href="romantic-kit-hermeneutics.html">Romantic Hermeneutics (How to Read)</a></li>
+          <li><a href="romantic-kit-authenticity.html">Authenticity (Self & Sincerity)</a></li>
+          <li><a href="romantic-kit-organic-form.html">The “Organic” (Art, Nature, Unity)</a></li>
+          <li><a href="romantic-kit-technology-machine.html">Technology & The Machine</a></li>
+          <li><a href="romantic-kit-contexts-germany.html">Contexts: Germany</a></li>
+          <li><a href="romantic-kit-contexts-england.html">Contexts: England</a></li>
+          <li><a href="romantic-kit-contexts-america.html">Contexts: America</a></li>
+          <li><a href="romantic-kit-glossary.html">Quick Glossary</a></li>
         </ul>
       </nav>
       <div class="bottom-links">
