--- a/post53.html
+++ b/post53.html
@@ -16,7 +16,7 @@
   <main>
     <article>
       <div class="top-links">
-        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <h2>53 Reconsidering the Romantics: Making It More Rigorous</h2>
       <p>For dozens of posts, I've been diagnosing what I call the "Romantic trace" in our contemporary debates about AI. I've argued that our anxieties about authenticity, the "human spark," and soulless machines are echoes of a worldview we inherited from the 1800s. It's a worldview I've suggested is inadequate for our current technological moment.</p>
@@ -27,7 +27,7 @@
       <p>The goal is to understand the depth and rigor of the opposition to AI by reconstructing its historical source. These posts will do three things:</p>
       <ul>
         <li><strong>Isolate the Method:</strong> I'll move past the caricature of "sincere feelings" and reconstruct the disciplined interpretive practices the Romantics actually developed. Their methods were designed to locate and illuminate the divine spark of human consciousness in a text.</li>
-        <li><strong>Provide a Diagnostic Toolkit:</strong> I'm creating a <a href="Romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to serve as the intellectual home base for this series. It describes key concepts and a step-by-step breakdown of the method, grounded in the movement's core convictions.</li>
+        <li><strong>Provide a Diagnostic Toolkit:</strong> I'm creating a <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to serve as the intellectual home base for this series. It describes key concepts and a step-by-step breakdown of the method, grounded in the movement's core convictions.</li>
         <li><strong>Stage a Confrontation:</strong> Each post in this series will apply this robust Romantic framework to the core problems of AI. The goal isn't a neutral "stress-test." The goal is to ask a more pointed question: What happens when you apply an interpretive process, forged in opposition to the machine, to its ultimate technological heir? The point is to see not just if the method breaks, but why it delivers a damning verdict.</li>
       </ul>
       
@@ -36,7 +36,7 @@
       <p>To move forward, we first have to understand the strongest form of the resistance. We must understand the Romantic argument on its own terms.</p>
 
       <hr>
-      <p class="series-note">Here's the <a href="Romantic-quick-kit.html">Quick Kit</a> mentioned above as the starting point for the posts that follow.</p>
+      <p class="series-note">Here's the <a href="romantic-quick-kit.html">Quick Kit</a> mentioned above as the starting point for the posts that follow.</p>
       <p><a href="index.html">Home</a> | <a href="post52.html">Previous Post</a> | <a href="post54.html">Next Post</a></p>
     </article>
   </main>
