--- a/post57.html
+++ b/post57.html
@@ -16,7 +16,7 @@
   <main>
     <article>
       <div class="top-links">
-        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <h2>57 The Search for the Divine Spark: Why the Ghost Matters</h2>
       <p>A purely systematic analysis of AI—looking only at datasets and algorithms—feels incomplete. The Romantic method, with its insistence on a <strong>double vision</strong>, seems to offer a richer path. It demands we analyze both the <strong>grammatical rail</strong> (the system) and the <strong>psychological rail</strong> (the singular practice).</p>
@@ -38,7 +38,7 @@
           <li id="ref2">Thomas Carlyle, <a href="https://victorianweb.org/authors/carlyle/signs1.html" target="_blank">"Signs of the Times" (1829)</a>. Carlyle argues that the mechanical spirit has led to a decay in religious belief and a focus on the visible and material over the spiritual and invisible.</li>
         </ol>
       </div>
-      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="Romantic-quick-kit.html">Quick Kit</a> handy.</p>
+      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post56.html">Previous Post</a> | <a href="post58.html">Next Post</a></p>
     </article>
   </main>
