--- a/post58.html
+++ b/post58.html
@@ -17,7 +17,7 @@
     <article>
       <h2>58 The Final Triumph of the Mechanical Age: A Coda</h2>
       <div class="top-links">
-        <a href="Romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
       </div>
       <p>The boldest claim of Romantic hermeneutics is Schleiermacher's goal: to understand a work "better than [the author] understood himself."<sup><a href="#ref1">1</a></sup> This was an attempt to make an author's unconscious, divine inspiration explicit. But this entire project was forged in the fires of another revolution. The Romantics' fiercest enemy was not a rival philosophy, but a new vision of the world: what Thomas Carlyle famously diagnosed as "the Mechanical Age."<sup><a href="#ref2">2</a></sup></p>
       <p>Carlyle's critique, like William Blake's of the "dark Satanic Mills," was not just about factories.<sup><a href="#ref3">3</a></sup> It was about a world where "Men are grown mechanical in head and in heart," where living craft is replaced by the "speedier, inanimate one."<sup><a href="#ref2">2</a></sup> It was a spiritual crisis. The Romantics defined themselves in opposition to this deadening, mechanistic logic. Their entire worldview was a "Mental Fight" to defend the organic, the spiritual, and the divine human imagination against it.<sup><a href="#ref3">3</a></sup></p>
@@ -39,7 +39,7 @@
           <li id="ref3">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>.</li>
         </ol>
       </div>
-      <p class="series-note">This post concludes the <em>"Steelmanning the Romantics"</em> series. The <a href="Romantic-quick-kit.html">Quick Kit</a> remains as a standing reference.</p>
+      <p class="series-note">This post concludes the <em>"Steelmanning the Romantics"</em> series. The <a href="romantic-quick-kit.html">Quick Kit</a> remains as a standing reference.</p>
       <p><a href="index.html">Home</a> | <a href="post57.html">Previous Post</a> | <a href="post59.html">Next Post</a></p>
     </article>
   </main>
