--- a/post53.html
+++ b/post53.html
@@ -1,47 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post 53 - Professor Plate's Notebook</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family/Space+Mono&display=swap" rel="stylesheet">
-  <script src="template.js"></script>
-  <meta name="description" content="Introducing the 'Steelmanning the Romantics' series, a critical re-evaluation of the Romantic worldview as a fierce intellectual resistance to the Mechanical Age and its modern heir, AI."/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Post 53 - Professor Plate's Notebook</title>
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+<script src="template.js"></script>
+<meta name="description" content="Introducing the 'Steelmanning the Romantics' series, a critical re-evaluation of the Romantic worldview as a fierce intellectual resistance to the Mechanical Age and its modern heir, AI."/>
 </head>
 <body>
-  <header data-template="header">
-    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
-  </header>
-  <main>
-    <article>
-      <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
-      </div>
-      <h2>53 Reconsidering the Romantics: Making It More Rigorous</h2>
-      <p>For dozens of posts, I've been diagnosing what I call the "Romantic trace" in our contemporary debates about AI. I've argued that our anxieties about authenticity, the "human spark," and soulless machines are echoes of a worldview we inherited from the 1800s. It's a worldview I've suggested is inadequate for our current technological moment.</p>
-      <p>But a critique is only as good as the version of the thing it criticizes. Maybe I've been attacking a sentimentalized caricature of the Romantic. By reducing it to a set of gut feelings, I may have underestimated my subject. True Romanticism wasn't just a mood; it was a fierce, coherent, and revolutionary worldview forged in direct opposition to what Thomas Carlyle called the "Mechanical Age." It was a spiritual and philosophical resistance to a world being remade by the logic of the machine.</p>
-      <p>This series of posts is an attempt to correct my earlier approach. Before we dismiss the Romantic worldview, we must first build its strongest, most principled form. We need to understand it not as a collection of feelings, but as a powerful counter-project against the very mechanistic philosophy that finds its ultimate expression in artificial intelligence.</p>
-      
-      <h3>What This Series Will Do</h3>
-      <p>The goal is to understand the depth and rigor of the opposition to AI by reconstructing its historical source. These posts will do three things:</p>
-      <ul>
-        <li><strong>Isolate the Method:</strong> I'll move past the caricature of "sincere feelings" and reconstruct the disciplined interpretive practices the Romantics actually developed. Their methods were designed to locate and illuminate the divine spark of human consciousness in a text.</li>
-        <li><strong>Provide a Diagnostic Toolkit:</strong> I'm creating a <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to serve as the intellectual home base for this series. It describes key concepts and a step-by-step breakdown of the method, grounded in the movement's core convictions.</li>
-        <li><strong>Stage a Confrontation:</strong> Each post in this series will apply this robust Romantic framework to the core problems of AI. The goal isn't a neutral "stress-test." The goal is to ask a more pointed question: What happens when you apply an interpretive process, forged in opposition to the machine, to its ultimate technological heir? The point is to see not just if the method breaks, but why it delivers a damning verdict.</li>
-      </ul>
-      
-      <h3>How to Read This Series</h3>
-      <p>These posts are a demonstration of a worldview in action. They apply the Romantic method not as a neutral experiment, but to reveal its foundational, uncompromising commitments and to show why, from its perspective, AI is not just a new tool, but a spiritual antagonist.</p>
-      <p>To move forward, we first have to understand the strongest form of the resistance. We must understand the Romantic argument on its own terms.</p>
+<header data-template="header">
+<h1><a href="index.html">Professor Plate's Notebook</a></h1>
+</header>
+<main>
+<article>
+<div class="top-links">
+<a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+</div>
+<h2>53 Reconsidering the Romantics: Making It More Rigorous</h2>
+<p>For dozens of posts, I've been diagnosing what I call the "Romantic trace" in our contemporary debates about AI. I've argued that our anxieties about authenticity, the "human spark," and soulless machines are echoes of a worldview we inherited from the 1800s. It's a worldview I've suggested is inadequate for our current technological moment.</p>
+<p>But a critique is only as good as the version of the thing it criticizes. Maybe I've been attacking a sentimentalized caricature of the Romantic. By reducing it to a set of gut feelings, I may have underestimated my subject. True Romanticism wasn't just a mood; it was a fierce, coherent, and revolutionary worldview forged in direct opposition to what Thomas Carlyle called the "Mechanical Age." It was a spiritual and philosophical resistance to a world being remade by the logic of the machine.</p>
+<p>This series of posts is an attempt to correct my earlier approach. Before we dismiss the Romantic worldview, we must first build its strongest, most principled form. We need to understand it not as a collection of feelings, but as a powerful counter-project against the very mechanistic philosophy that finds its ultimate expression in artificial intelligence.</p>
+ 
 
-      <hr>
-      <p class="series-note">Here's the <a href="romantic-quick-kit.html">Quick Kit</a> mentioned above as the starting point for the posts that follow.</p>
-      <p><a href="index.html">Home</a> | <a href="post52.html">Previous Post</a> | <a href="post54.html">Next Post</a></p>
-    </article>
-  </main>
-  <footer data-template="footer">
-    <p>&copy;2025 Daniel Plate</p>
-  </footer>
+  <h3>What This Series Will Do</h3>
+  <p>The goal is to understand the depth and rigor of the opposition to AI by reconstructing its historical source. These posts will do three things:</p>
+  <ul>
+    <li><strong>Isolate the Method:</strong> I'll move past the caricature of "sincere feelings" and reconstruct the disciplined interpretive practices the Romantics actually developed. Their methods were designed to locate and illuminate the divine spark of human consciousness in a text.</li>
+    <li><strong>Provide a Diagnostic Toolkit:</strong> I'm creating a <a href="romantic-quick-kit.html"><strong>Romantic Quick Kit</strong></a> to serve as the intellectual home base for this series. It describes key concepts and a step-by-step breakdown of the method, grounded in the movement's core convictions.</li>
+    <li><strong>Stage a Confrontation:</strong> Each post in this series will apply this robust Romantic framework to the core problems of AI. The goal isn't a neutral "stress-test." The goal is to ask a more pointed question: What happens when you apply an interpretive process, forged in opposition to the machine, to its ultimate technological heir? The point is to see not just if the method breaks, but why it delivers a damning verdict.</li>
+  </ul>
+  
+  <h3>How to Read This Series</h3>
+  <p>These posts are a demonstration of a worldview in action. They apply the Romantic method not as a neutral experiment, but to reveal its foundational, uncompromising commitments and to show why, from its perspective, AI is not just a new tool, but a spiritual antagonist.</p>
+  
+  <p>As an example of spiritual antagonism, I'm giving you one of the great fighters in literary history: William Blake (a pure Romantic). The poem below by Blake serves as a preface to his great longer illustrated poem project, <a href="https://blakearchive.org/copy/milton.b?descId=milton.b.illbk.02" target="_blank">Milton</a>. It shows Blake's idea of fierce struggle through poetry.</p>
+
+  <blockquote style="text-align: center; margin: 2em auto; font-style: italic;">
+    <p>
+      And did those feet in ancient time<br>
+      Walk upon England’s mountains green?<br>
+      And was the holy Lamb of God<br>
+      On England’s pleasant pastures seen?<br>
+    </p>
+    <p>
+      And did the Countenance Divine<br>
+      Shine forth upon our clouded hills?<br>
+      And was Jerusalem builded here<br>
+      Among these dark Satanic Mills?<br>
+    </p>
+    <p>
+      Bring me my bow of burning gold!<br>
+      Bring me my arrows of desire!<br>
+      Bring me my spear! O clouds, unfold!<br>
+      Bring me my chariot of fire!<br>
+    </p>
+    <p>
+      I will not cease from mental fight,<br>
+      Nor shall my sword sleep in my hand,<br>
+      Till we have built Jerusalem<br>
+      In England’s green and pleasant land.<br>
+    </p>
+  </blockquote>
+
+  <p>To move forward, we first have to understand the strongest form of the resistance. We must understand the Romantic argument on its own terms.</p>
+
+  <hr>
+  <p class="series-note">Here's the <a href="romantic-quick-kit.html">Quick Kit</a> mentioned above as the starting point for the posts that follow.</p>
+  <p><a href="index.html">Home</a> | <a href="post52.html">Previous Post</a> | <a href="post54.html">Next Post</a></p>
+</article>
+
+</main>
+<footer data-template="footer">
+<p>&copy;2025 Daniel Plate</p>
+</footer>
 </body>
 </html>
