--- a/post55.html
+++ b/post55.html
@@ -42,7 +42,7 @@
           <li id="ref3">William Blake, <a href="https://www.poetryfoundation.org/poems/43656/the-divine-image" target="_blank" rel="noopener">William Blake, "The Divine Image" (Songs of Innocence)</a> from <em>Songs of Innocence</em>, which speaks of "the human form divine."</li>
         </ol>
       </div>
-      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
+      <p class="series-note">This post is part of the <em>"Reconsidering the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post54.html">Previous Post</a> | <a href="post56.html">Next Post</a></p>
     </article>
   </main>
