--- a/post56.html
+++ b/post56.html
@@ -39,7 +39,7 @@
           <li id="ref3">E.T.A. Hoffmann, <a href="https://www.gutenberg.org/cache/epub/31377/pg31377-images.html#div1_sand_man" target="_blank">"The Sandman" (public-domain English translation)</a>. This story is a canonical Romantic exploration of the uncanny valley and the anxiety over automata.</li>
         </ol>
       </div>
-      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
+      <p class="series-note">This post is part of the <em>"Reconsidering the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post55.html">Previous Post</a> | <a href="post57.html">Next Post</a></p>
     </article>
   </main>
