--- a/post57.html
+++ b/post57.html
@@ -38,7 +38,7 @@
           <li id="ref2">Thomas Carlyle, <a href="https://victorianweb.org/authors/carlyle/signs1.html" target="_blank">"Signs of the Times" (1829)</a>. Carlyle argues that the mechanical spirit has led to a decay in religious belief and a focus on the visible and material over the spiritual and invisible.</li>
         </ol>
       </div>
-      <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
+      <p class="series-note">This post is part of the <em>"Reconsidering the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
       <p><a href="index.html">Home</a> | <a href="post56.html">Previous Post</a> | <a href="post58.html">Next Post</a></p>
     </article>
   </main>
