--- a/post58.html
+++ b/post58.html
@@ -39,7 +39,7 @@
           <li id="ref3">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>.</li>
         </ol>
       </div>
-      <p class="series-note">This post concludes the <em>"Steelmanning the Romantics"</em> series. The <a href="romantic-quick-kit.html">Quick Kit</a> remains as a standing reference.</p>
+      <p class="series-note">This post concludes the <em>"Reconsidering the Romantics"</em> series. The <a href="romantic-quick-kit.html">Quick Kit</a> remains as a standing reference.</p>
       <p><a href="index.html">Home</a> | <a href="post57.html">Previous Post</a> | <a href="post59.html">Next Post</a></p>
     </article>
   </main>
