--- a/post59.html
+++ b/post59.html
@@ -45,7 +45,7 @@
           <li id="ref1">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>.</li>
         </ol>
       </div>
-      <p class="series-note">This post serves as a practical capstone to the <em>"Steelmanning the Romantics"</em> series, demonstrating both the power and the fierce moral commitments of the method.</p>
+      <p class="series-note">This post serves as a practical capstone to the <em>"Reconsidering the Romantics"</em> series, demonstrating both the power and the fierce moral commitments of the method.</p>
       <p><a href="index.html">Home</a> | <a href="post58.html">Previous Post</a> | <a href="post60.html">Next Post</a></p>
     </article>
   </main>
