--- a/post54.html
+++ b/post54.html
@@ -20,7 +20,7 @@
   </div>
   <h2>54 The Author-Function as Sacrilege: A Romantic Test</h2>
   <p>The most common critique of AI writing is that there is "no one there." This assumes the Romantic ideal of an "author" as a soul pouring its meaning into the text. But the rigorous Romantics started from a more skeptical place: Schleiermacher famously argued that <strong>misunderstanding is the norm</strong>, and therefore interpretation must be a disciplined art.<sup><a href="#ref1">1</a></sup> A core part of that art was reconstructing the author's singular practice.</p>
-  <p>This wasn't just empathy; it was a formal method. It involved both a <strong>comparative</strong> analysis (tracing patterns against the rules of language) and a <strong>"divinatory"</strong> one—making a disciplined, intuitive leap to hypothesize the creative act that could produce such a text. So, let's run this more complex test. What happens when a Romantic interpreter confronts an AI?</p>
+  <p>This wasn't just empathy; it was a formal method. It involved both a <strong>comparative</strong> analysis (tracing patterns against the rules of language) and a <strong>"divinatory"</strong> one, making a disciplined, intuitive leap to hypothesize the creative act that could produce such a text. So, let's run this more complex test. What happens when a Romantic interpreter confronts an AI?</p>
 
   <h3>A Practical Demonstration</h3>
   <p>I prompted an AI: "Write a four-line poem about a city at night."</p>
@@ -29,11 +29,11 @@
   </blockquote>
   <p>Applying the method:</p>
   
-  <h4>1. The Grammatical/Comparative Rail</h4>
+  <h4>1. The Grammatical/Comparative Rail (if the word "rail" confuses you here, head over <a href="romantic-kit-hermeneutics.html">here</a>)</h4>
   <p>The poem uses shared conventions: quatrain, iambic-ish meter, ABCB rhyme, familiar tropes. This is the baseline evidence, the public system of language.</p>
 
   <h4>2. The Psychological/Divinatory Rail</h4>
-  <p>Now we must make our leap. We must, as Schleiermacher puts it, "transform oneself into the other person in order to grasp his individuality directly."<sup><a href="#ref2">2</a></sup> And here, the method does not just fail; it recoils. The Romantic interpreter, reaching for a mind, finds only a mechanism. For a visionary like William Blake, for whom imagination was the divine spark of God in man, this act would be a form of spiritual horror.<sup><a href="#ref3">3</a></sup> The "divinatory" leap finds nothing to grasp. There is no soul, no vision, no "Mental Fight."<sup><a href="#ref4">4</a></sup> There is only the clatter of what Blake would call the "dark Satanic Mills"—a machine grinding language into a plausible but dead form.<sup><a href="#ref4">4</a></sup></p>
+  <p>Now we must make our leap. We must, as Schleiermacher puts it, "transform oneself into the other person in order to grasp his individuality directly."<sup><a href="#ref2">2</a></sup> And here, the method does not just fail; it recoils. The Romantic interpreter, reaching for a mind, finds only a mechanism. For a visionary like William Blake, for whom imagination was the divine spark of God in man, this act would be a form of spiritual horror.<sup><a href="#ref3">3</a></sup> The "divinatory" leap finds nothing to grasp. There is no soul, no vision, no "Mental Fight."<sup><a href="#ref4">4</a></sup> There is only the clatter of what Blake would call the "dark Satanic Mills." A machine grinding language into a plausible but dead form.<sup><a href="#ref4">4</a></sup></p>
 
   <h3>The Critical Pivot: A Failure of Method, A Judgment of the Machine</h3>
   <p>The Romantic method does not "work" on AI. It breaks, and in breaking, it delivers a verdict. The method was designed to bridge the gap between two human minds. When one of those minds is a statistical process, the bridge leads nowhere. The method doesn't just "project a ghost"; it registers a profound and horrifying absence. It proves that the AI has no "author-function" in any meaningful Romantic sense.</p>
@@ -49,7 +49,7 @@
       <li id="ref4">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>. The source of both "Mental Fight" and "dark Satanic Mills."</li>
     </ol>
   </div>
-  <p class="series-note">This post is part of the <em>"Steelmanning the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
+  <p class="series-note">This post is part of the <em>"Reconsidering the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
   <p><a href="index.html">Home</a> | <a href="post53.html">Previous Post</a> | <a href="post55.html">Next Post</a></p>
 </article>
 </main>
