--- a/post55.html
+++ b/post55.html
@@ -1,53 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Post 55 - Professor Plate's Notebook</title>
-  <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
-  <script src="template.js"></script>
-  <meta name="description" content="Rejecting the 'bullshit' critique of AI as insufficient and applying a Romantic lens to reveal AI's output as meaningless chaos, not a textual unconscious."/>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Post 55 - Professor Plate's Notebook</title>
+<link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+<script src="template.js"></script>
+<meta name="description" content="Rejecting the 'bullshit' critique of AI as insufficient and applying a Romantic lens to reveal AI's output as meaningless chaos, not a textual unconscious."/>
 </head>
 <body>
-  <header data-template="header">
-    <h1><a href="index.html">Professor Plate's Notebook</a></h1>
-  </header>
-  <main>
-    <article>
-      <div class="top-links">
-        <a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
-      </div>
-      <h2>55 More Than Bullshit: The Soulless Chaos of the Machine</h2>
-      <p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>. But this critique is too generous. It grants the machine a semblance of agency—the bullshitter, after all, has a purpose. The rigorous Romantic toolkit reveals a deeper, more damning truth.</p>
-      <p>Friedrich Schlegel argued that a great work "aims at more than it knows," carrying <strong>unconscious meanings</strong>. He believed a text's "confusions" and contradictions were themselves meaningful, revealing the author's internal struggles.<sup><a href="#ref1">1</a></sup> For a visionary like William Blake, art was a "Mental Fight," the struggle to give form to divine imagination.<sup><a href="#ref2">2</a></sup> Flaws and "confusions" in such a work are the scars of a noble battle. What happens when we apply this lens to AI?</p>
+<header data-template="header">
+<h1><a href="index.html">Professor Plate's Notebook</a></h1>
+</header>
+<main>
+<article>
+<div class="top-links">
+<a href="romantic-quick-kit.html" class="quickkit-pill-small">Romantic Quick Kit</a>
+</div>
+<h2>55 More Than Bullshit: The Soulless Chaos of the Machine</h2>
+<p>A powerful critique labels LLMs as "bullshit machines," indifferent to the truth. From a Romantic view, this is a charge of radical <a href="romantic-kit-authenticity.html">inauthenticity</a>. But this critique is too generous. It grants the machine a semblance of agency. The bullshitter, after all, has a purpose. The rigorous Romantic toolkit reveals a deeper, more damning truth.</p>
+<p>Friedrich Schlegel argued that a great work "aims at more than it knows," carrying <strong>unconscious meanings</strong>. He believed a text's "confusions" and contradictions were themselves meaningful, revealing the author's internal struggles.<sup><a href="#ref1">1</a></sup> For a visionary like William Blake, art was a "Mental Fight," the struggle to give form to divine imagination.<sup><a href="#ref2">2</a></sup> Flaws and "confusions" in such a work are the scars of a noble battle. What happens when we apply this lens to AI?</p>
 
-      <h3>From Bullshit to Chaos: An Example</h3>
-      <p>Let's use our previous example: an AI prompted for a corporate statement on "innovation" produces text blending Silicon Valley jargon with agrarian metaphors ("planting the seeds of synergy," "harvesting disruptive ideas").</p>
-      <ul>
-        <li>The "bullshit" reading dismisses this as a meaningless, contradictory cliché.</li>
-        <li>A <strong>Romantic hermeneutic reading</strong> sees something far worse. This is not "productive confusion." Schlegel's method sought the hidden depths of a <em>human</em> mind. Blake's art was a product of the "Divine Humanity."<sup><a href="#ref3">3</a></sup> The AI's contradictions are not the sign of a struggling soul, but the meaningless output of a purely mechanical process. It is chaos, not unconscious meaning.</li>
-      </ul>
-      
-      <h3>The Critical Pivot: The Unconscious vs. The Unthinking</h3>
-      <p>Here the Romantic method delivers its judgment. The "unconscious" of a human artist is a wellspring of vision, intuition, and buried truth. The process of an AI is unthinking. Its "confusions" reveal nothing but the statistical noise of its training data. They are accidents of the machine, not symbols from the soul.</p>
-      <p>For Blake, who fought against the "dark Satanic Mills" of a mechanistic worldview, an AI's text would be the ultimate artifact of that satanic logic.<sup><a href="#ref2">2</a></sup> It is a system that mimics the form of creation without the divine spark of imagination that makes it sacred. The "bullshit" critique is a secular complaint. The Romantic critique is theological: the AI's output is not a flawed text to be interpreted, but a hollow idol, a profane imitation of the divine act of creation.</p>
+  <h3>From Bullshit to Chaos: An Example</h3>
+  <p>Imagine an AI is prompted to generate a corporate statement about its new strategic plan. It produces the following:</p>
+  <blockquote style="margin: 1em 2em; font-style: italic; color: #555;">
+    <p>"To cultivate our Q3 strategic roadmap, we are planting the seeds of synergy across all departmental silos. By nurturing these emergent workflows with data-driven sunlight, we will soon harvest a bumper crop of disruptive innovation, ensuring a fruitful and scalable future."</p>
+  </blockquote>
+  <ul>
+    <li>The "bullshit" reading dismisses this as a meaningless, contradictory cliché.</li>
+    <li>A <strong>Romantic hermeneutic reading</strong> sees something far worse. This is not "productive confusion." Schlegel's method sought the hidden depths of a <em>human</em> mind. Blake's art was a product of the "Divine Humanity."<sup><a href="#ref3">3</a></sup> The AI's contradictions are not the sign of a struggling soul, but the meaningless output of a purely mechanical process. It is chaos,<sup><a href="#ref4">4</a></sup> not unconscious meaning.</li>
+  </ul>
+  
+  <h3>The Critical Pivot: The Unconscious vs. The Unthinking</h3>
+  <p>Here the Romantic method delivers its judgment. The "unconscious" of a human artist is a wellspring of vision, intuition, and buried truth. The process of an AI is unthinking. Its "confusions" reveal nothing but the statistical noise of its training data. They are accidents of the machine, not symbols from the soul.</p>
+  <p>For Blake, who fought against the "dark Satanic Mills" of a mechanistic worldview, an AI's text would be the ultimate artifact of that satanic logic.<sup><a href="#ref2">2</a></sup> It is a system that mimics the form of creation without the divine spark of imagination that makes it sacred. The "bullshit" critique is a secular complaint. The Romantic critique is theological: the AI's output is not a flawed text to be interpreted, but a hollow idol, a profane imitation of the divine act of creation.</p>
 
-      <hr>
-      <div class="references">
-        <h3>References</h3>
-        <ol>
-          <li id="ref1">Friedrich Schlegel, <a href="https://germanhistorydocs.org/en/the-holy-roman-empire-1648-1815/friedrich-schlegel-athanaeum-fragments-1798" target="_blank"><em>Athenaeum Fragments</em></a>, No. 20. Schlegel writes, "A work is cultivated when it is delimited everywhere but limited nowhere," implying this inexhaustible, unconscious depth.</li>
-          <li id="ref2">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>.</li>
-          <li id="ref3">William Blake, <a href="https://www.poetryfoundation.org/poems/43656/the-divine-image" target="_blank" rel="noopener">William Blake, "The Divine Image" (Songs of Innocence)</a> from <em>Songs of Innocence</em>, which speaks of "the human form divine."</li>
-        </ol>
-      </div>
-      <p class="series-note">This post is part of the <em>"Reconsidering the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
-      <p><a href="index.html">Home</a> | <a href="post54.html">Previous Post</a> | <a href="post56.html">Next Post</a></p>
-    </article>
-  </main>
-  <footer data-template="footer">
-    <p>&copy;2025 Daniel Plate</p>
-  </footer>
+  <hr>
+  <div class="references">
+    <h3>References</h3>
+    <ol>
+      <li id="ref1">This concept is from Friedrich Schlegel's 1798 essay, "On Goethe's Meister." For an overview of his thought, see the <a href="https://plato.stanford.edu/entries/schlegel/" target="_blank">Stanford Encyclopedia of Philosophy entry on Schlegel</a>. For the essay itself, a search on JSTOR for "Schlegel on Goethe's Meister" is recommended.</li>
+      <li id="ref2">William Blake, Preface to <a href="https://blakearchive.org/work/milton" target="_blank"><em>Milton: A Poem</em></a>.</li>
+      <li id="ref3">William Blake, <a href="https://www.poetryfoundation.org/poems/43656/the-divine-image" target="_blank" rel="noopener">"The Divine Image"</a> from <em>Songs of Innocence</em>, which speaks of "the human form divine."</li>
+      <li id="ref4">The term "chaos" here is used in its modern sense of meaningless disorder. However, ancient ideas of <a href="https://en.wikipedia.org/wiki/Chaos_(cosmogony)" target="_blank">Chaos</a> as a primordial, unformed state from which the cosmos emerged could offer a fascinating line of speculative research, especially in connection with LLMs, aesthetics, and the Romantic critique of mechanistic creation.</li>
+    </ol>
+  </div>
+  <p class="series-note">This post is part of the <em>"Reconsidering the Romantics"</em> series. Keep the <a href="romantic-quick-kit.html">Quick Kit</a> handy.</p>
+  <p><a href="index.html">Home</a> | <a href="post54.html">Previous Post</a> | <a href="post56.html">Next Post</a></p>
+</article>
+
+</main>
+<footer data-template="footer">
+<p>&copy;2025 Daniel Plate</p>
+</footer>
 </body>
 </html>
